@@ -1,4 +1,4 @@
-/* $Id: tiffdither.c,v 1.9 2005-04-27 18:37:19 dron Exp $ */
+/* $Id: tiffdither.c,v 1.10 2008-05-23 19:52:49 fwarmerdam Exp $ */
 
 /*
  * Copyright (c) 1988-1997 Sam Leffler
@@ -77,7 +77,8 @@ fsdither(TIFF* in, TIFF* out)
 	 * Get first line
 	 */
 	if (TIFFReadScanline(in, inputline, 0, 0) <= 0)
-		return;
+            goto skip_on_error;
+
 	inptr = inputline;
 	nextptr = nextline;
 	for (j = 0; j < imagewidth; ++j)
@@ -128,6 +129,7 @@ fsdither(TIFF* in, TIFF* out)
 		if (TIFFWriteScanline(out, outline, i-1, 0) < 0)
 			break;
 	}
+  skip_on_error:
 	_TIFFfree(inputline);
 	_TIFFfree(thisline);
 	_TIFFfree(nextline);
@@ -191,7 +193,6 @@ main(int argc, char* argv[])
 	float floatv;
 	char thing[1024];
 	uint32 rowsperstrip = (uint32) -1;
-	int onestrip = 0;
 	uint16 fillorder = 0;
 	int c;
 	extern int optind;
@@ -213,7 +214,6 @@ main(int argc, char* argv[])
 			break;
 		case 'r':		/* rows/strip */
 			rowsperstrip = atoi(optarg);
-			onestrip = 0;
 			break;
 		case 't':
 			threshold = atoi(optarg);
@@ -263,10 +263,7 @@ main(int argc, char* argv[])
 	CopyField(TIFFTAG_XRESOLUTION, floatv);
 	CopyField(TIFFTAG_YRESOLUTION, floatv);
 	CopyField(TIFFTAG_RESOLUTIONUNIT, shortv);
-	if (onestrip)
-		rowsperstrip = imagelength-1;
-	else
-		rowsperstrip = TIFFDefaultStripSize(out, rowsperstrip);
+        rowsperstrip = TIFFDefaultStripSize(out, rowsperstrip);
 	TIFFSetField(out, TIFFTAG_ROWSPERSTRIP, rowsperstrip);
 	switch (compression) {
 	case COMPRESSION_CCITTFAX3:
